overflow fix

--- a/UIKit/style.css
+++ b/UIKit/style.css
@@ -1,5 +1,6 @@
 .UIBaseContainer {
     overflow: hidden;
+    position: relative;
 }
 .UIKitPanel {
     position: absolute;
